# verybadgame

./: .dockerignore  .env  .env.template  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  ENVVARS.jsonl  ENVVARS.md  ENVVARS.template.md  Makefile  README.md  poetry.toml  pyproject.toml  verybadgame.spec
.github/workflows/: ci.yml
docker/: ci.DockerFile  docker-compose-tests.yml  run_tests.sh
project/: __main__.py  game.py  store.py
project/entities/: entity.py  floor.py  hud.py  player.py
project/interfaces/: interface.py  score.py
project/settings/: logging.py
project/utils/: common.py  controls.py  debug.py  game_config.py  images.py  sounds.py  utils.py  window.py
scripts/: __main__.py  generate_envvars.sh  introspection.py
tests/: main.py  test_sample.py
